# web3auth-rust

./: README.md
backend/: .env.example  Cargo.toml  README.md
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: mod.rs  user.rs
backend/src/routes/: auth.rs
backend/src/services/: auth.rs
backend/src/utils/: error.rs
frontend/: README.md  package-lock.json  package.json
frontend/src/: app.css
frontend/src/lib/components/: AuthStatus.svelte  MetamaskButton.svelte  UserProfile.svelte  index.ts
frontend/src/lib/services/: api.ts  index.ts  web3.ts
frontend/src/lib/stores/: auth.ts
frontend/src/lib/types/: auth.ts
frontend/src/routes/: +page.svelte
