[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["cors"] }
tokio = { version = "1.35.1", features = ["full"] }
hyper = { version = "1.0.1", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
ethers = { version = "2.0.14", features = ["legacy", "eip712"] }
jsonwebtoken = "9.2.0"
rand = "0.9.0"
hex = "0.4.3"
sha3 = "0.10.8"
thiserror = "2.0.12"
anyhow = "1.0.79"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = { version = "0.4.31", features = ["serde"] }
once_cell = "1.19.0"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
dotenv = "0.15.0"
